<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CadastrarAct">

    <TextView
        android:id="@+id/txtTituloCadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txtCadastre_se"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/conteinerComponetes"
        style="@style/containerConponents"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTituloCadastrese" />

    <EditText
        android:id="@+id/edtNome"
        style="@style/edtText"
        android:hint="@string/txtNome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/conteinerComponetes"/>

    <EditText
        android:id="@+id/edtEmail"
        style="@style/edtText"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNome"/>

    <EditText
        android:id="@+id/edtSenha"
        style="@style/edtText"
        android:hint="@string/edtSenha"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrar"
        style="@style/botao"
        android:text="@string/txtCadastrar"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conteinerComponetes"/>
</androidx.constraintlayout.widget.ConstraintLayout>