<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntrarAct"
    android:background="@drawable/background">

    <View
        android:id="@+id/conteinerComponetes"
        style="@style/containerConponents"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/edtText"
        android:hint="@string/edtEmail"
        android:maxLength="20"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/conteinerComponetes"
        app:layout_constraintStart_toStartOf="@id/conteinerComponetes"
        app:layout_constraintTop_toTopOf="@id/conteinerComponetes"/>

    <EditText
        android:id="@+id/edtSenha"
        style="@style/edtText"
        android:hint="@string/edtSenha"
        android:inputType="numberPassword"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@id/conteinerComponetes"
        app:layout_constraintStart_toStartOf="@id/conteinerComponetes"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"/>

    <TextView
        android:id="@+id/txtEsqSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="right|end"
        android:padding="16dp"
        android:text="@string/edtEsqueceuSenha"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSenha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrar"
        style="@style/botao"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEsqSenha" />

    <ProgressBar
        android:id="@+id/progresBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conteinerComponetes" />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtCadastrese"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progresBar" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>